--- a/package.json
+++ b/package.json
@@ -1,31 +1,60 @@
 {
-  "name": "express-template",
-  "version": "1.0.0",
-  "description": "",
+  "name": "cohesion-service-api",
+  "version": "0.1.0",
+  "description": "An API for managing service requests through Cohesion's platform",
   "main": "index.js",
+  "engines": {
+    "node": ">=12.0.0"
+  },
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
     "debug": "ndb src/server.js",
-    "test": "mocha --require test/setup.js", 
-    "predeploy": "npm audit", 
+    "test": "mocha --require test/setup.js",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "prettier": "prettier --check **/*.js",
+    "prettier:fix": "prettier --write **/*.js",
+    "predeploy": "npm audit",
     "deploy": "git push heroku master"
   },
   "keywords": [],
   "author": "Michael Wedd",
-  "license": "ISC",
-  "devDependencies": {
-    "chai": "^4.2.0",
-    "mocha": "^6.1.4",
-    "ndb": "^1.0.45",
-    "nodemon": "^1.19.1",
-    "supertest": "^4.0.2"
-  },
+  "license": "MIT",
   "dependencies": {
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "dotenv": "^8.0.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "helmet": "^3.18.0",
-    "morgan": "^1.9.1"
+    "express-mongo-sanitize": "^2.1.0",
+    "helmet": "^4.6.0",
+    "http-status": "^1.5.0",
+    "joi": "^17.4.1",
+    "mongoose": "^5.13.5",
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.6.3",
+    "winston": "^3.3.3",
+    "xss-clean": "^0.1.1"
+  },
+  "devDependencies": {
+    "chai": "^4.3.4",
+    "chai-as-promised": "^7.1.1",
+    "coveralls": "^3.1.1",
+    "eslint": "^7.0.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^24.0.1",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-security": "^1.4.0",
+    "faker": "^5.1.0",
+    "lint-staged": "^11.1.1",
+    "mocha": "^9.0.3",
+    "nbd": "^0.2.2",
+    "nodemon": "^2.0.12",
+    "prettier": "^2.3.2",
+    "sinon": "^11.1.2",
+    "sinon-chai": "^3.7.0",
+    "supertest": "^6.1.4"
   }
 }
