--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "morgan": "^1.10.0",
     "nodemailer": "^6.6.3",
     "winston": "^3.3.3",
-    "xss-clean": "^0.1.1"
+    "xss-clean": "^0.1.1",
+    "validator": "^13.0.0"
   },
   "devDependencies": {
     "chai": "^4.3.4",
