--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
     "mongoose": "^5.13.5",
     "morgan": "^1.10.0",
     "nodemailer": "^6.6.3",
+    "validator": "^13.6.0",
     "winston": "^3.3.3",
-    "xss-clean": "^0.1.1",
-    "validator": "^13.0.0"
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "chai": "^4.3.4",
