--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cohesion-service-api",
   "version": "0.1.0",
   "description": "An API for clients to make maintenance requests to building managers through Cohesion's platform",
-  "main": "index.js",
+  "main": "server.js",
   "engines": {
     "node": ">=12.0.0"
   },
