--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mongoose": "^5.13.5",
     "morgan": "^1.10.0",
     "nodemailer": "^6.6.3",
+    "pug": "^3.0.2",
     "validator": "^13.6.0",
     "winston": "^3.3.3",
     "xss-clean": "^0.1.1"
