--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,8 +3,8 @@
     "node": true,
     "jest": true
   },
-  "extends": ["airbnb-base", "plugin:security/recommended", "plugin:prettier/recommended"],
-  "plugins": ["security", "prettier"],
+  "extends": ["airbnb-base", "plugin:jest/recommended", "plugin:security/recommended", "plugin:prettier/recommended"],
+  "plugins": ["jest", "security", "prettier"],
   "parserOptions": {
     "ecmaVersion": 2018
   },
@@ -13,6 +13,7 @@
     "func-names": "off",
     "no-underscore-dangle": "off",
     "consistent-return": "off",
+    "jest/expect-expect": "off",
     "security/detect-object-injection": "off"
   }
 }
