--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
     "debug": "ndb src/server.js",
-    "test": "mocha --require test/setup.js",
+    "test": "jest -i --colors --verbose",
+    "test:watch": "jest -i --watchAll",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "prettier": "prettier --check **/*.js",
@@ -39,23 +40,21 @@
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
-    "chai": "^4.3.4",
-    "chai-as-promised": "^7.1.1",
-    "coveralls": "^3.1.1",
     "eslint": "^7.0.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jest": "^24.0.1",
+    "eslint-plugin-jest": "^24.4.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-security": "^1.4.0",
     "faker": "^5.1.0",
+    "jest": "^27.0.6",
     "lint-staged": "^11.1.1",
     "mocha": "^9.0.3",
+    "node-mocks-http": "^1.10.1",
     "nodemon": "^2.0.12",
     "prettier": "^2.3.2",
     "sinon": "^11.1.2",
-    "sinon-chai": "^3.7.0",
     "supertest": "^6.1.4"
   }
 }
